Segundo commit, finalizacion,

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </ul>
         </nav>
         <section class="header-information">
+            <div class="contenedor-principal">
             <div class="contenedor-img">
                 <div class="div-circle"></div>
                 <img class="header-image-one" src="./assets/img/photo desktop.png" alt="">
@@ -43,6 +44,7 @@
                     <div class="div-social"><img class="icon" src="./assets/iconos/twitter.svg" alt=""></div> 
                 </div>
             </div>
+            </div>
             <div class="contenedor-store">
                 <div class="div-store"><img class="icon" src="./assets/iconos/google.svg" alt=""></div>
                 <div class="div-store"><img class="icon" src="./assets/iconos/amazon.svg" alt=""></div>
@@ -53,7 +55,13 @@
     <main>
         <section class="section-about">
             <h2>Acerca de mí</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt perspiciatis consequuntur quibusdam recusandae non numquam, magnam placeat assumenda asperiores itaque ex minus aspernatur ab quia similique, mollitia sapiente illum illo?</p>
+            <p>Ingeniero de Software de la Universidad Surcolombiana, con espíritu
+                emprendedor, sentido social, dinámico, disciplinado, ordenado, metódico,
+                cordial, sencillo, con aspiraciones, deseos de superación y metas basadas en el
+                logro de objetivos; aprendo con rapidez y me intereso por cumplir de manera
+                adecuada con la puntualidad, honestidad y responsabilidad en las distintas
+                actividades que realizo.
+                </p>
         </section>
         <section class="section-services">
             <h2>Servicios</h2>
@@ -138,6 +146,7 @@
             </div>
         </div>
     </footer>
+    <p class="hecho">Hecho con <img src="./assets/iconos/me-gusta.png" alt="Icono"> en Academlo</p>
     
 </body>
 </html>
