margin right toogle

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <nav class="nav">
             <input type="checkbox" id="btn-menu">
-            <label for="btn-menu" class="nav-toggle">
+            <label for="btn-menu" class="nav-toggle" id="im-toogle">
                 <img src="./assets/iconos/menu.svg" alt="Logo">
             </label >
             <ul class="nav-menu nav-menu_visible">
